--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
 			</div>
 			<!-- /.modal-header -->
 			<div class="modal-body">
+				<!-- <div class="food-row">
+					<span class="food-name">Ролл угорь стандарт</span>
+					<strong class="food-price">250 ₽</strong>
+					<div class="food-counter">
+						<button class="counter-button">-</button>
+						<span class="counter">1</span>
+						<button class="counter-button">+</button>
+					</div>
+				</div>
 				<div class="food-row">
 					<span class="food-name">Ролл угорь стандарт</span>
 					<strong class="food-price">250 ₽</strong>
@@ -143,7 +152,6 @@
 						<button class="counter-button">+</button>
 					</div>
 				</div>
-				<!-- /.foods-row -->
 				<div class="food-row">
 					<span class="food-name">Ролл угорь стандарт</span>
 					<strong class="food-price">250 ₽</strong>
@@ -153,7 +161,6 @@
 						<button class="counter-button">+</button>
 					</div>
 				</div>
-				<!-- /.foods-row -->
 				<div class="food-row">
 					<span class="food-name">Ролл угорь стандарт</span>
 					<strong class="food-price">250 ₽</strong>
@@ -162,18 +169,7 @@
 						<span class="counter">1</span>
 						<button class="counter-button">+</button>
 					</div>
-				</div>
-				<!-- /.foods-row -->
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
-				<!-- /.foods-row -->
+				</div> -->
 			</div>
 			<!-- /.modal-body -->
 			<div class="modal-footer">
